# Snaker

./: .cproject  .gitignore  .project  CMakeLists.txt  README.md  SnakerDebug.7z  SnakerRelease.7z
OldFiles/: main_old.cpp
assets/: menu_structure.txt  settings.txt
assets/lang/: Deutsch.txt  English.txt  Klingon_plqaD.txt  Polish.txt  Polski.txt  _LangList.txt
cmake/: FindSDL2_net.cmake
src/: Dot.cpp  Dot.h  LTexture.cpp  LTexture.h  Menu.cpp  Menu.h  Snake.cpp  Snake.h  Tile.cpp  Tile.h  Timer.h  Win.cpp  Win.h  main.cpp  main.h
src/classes/: Bot.cpp  Bot.h  Button.cpp  Button.h  Dot.cpp  Dot.h  Fruit.cpp  Fruit.h  Game.cpp  Game.h  GameMenu.cpp  GameMenu.h  LTexture.cpp  LTexture.h  Menu.cpp  Menu.h  Player.cpp  Player.h  PowerUp.cpp  PowerUp.h  Settings.cpp  Settings.h  Snake.cpp  Snake.h  Tile.cpp  Tile.h  Timer.cpp  Timer.h  Win.cpp  Win.h
src/functions/: collisions.cpp  collisions.h  eventHandler.cpp  eventHandler.h  initsdl.cpp  initsdl.h  moveFruit.cpp  moveFruit.h
